services spacing fixed + text sections added

--- a/css/jpeg-dealers-retro-desktop.css
+++ b/css/jpeg-dealers-retro-desktop.css
@@ -378,9 +378,10 @@ a {
 }
 
 .popup.services {
-  left: 29%;
+  left: 25%;
   top: 9%;
   display: none;
+  width: 50vw;
 }
 
 .popup.portfolio {
@@ -795,11 +796,11 @@ a {
 
 .heading {
   margin-top: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   font-family: Pressstart2p, sans-serif;
   color: #005249;
   font-size: 0.7rem;
-  line-height: 1.2;
+  line-height: 1.5;
   font-weight: 400;
 }
 
@@ -1048,8 +1049,8 @@ a {
   margin-bottom: 0px;
   font-family: Pressstart2p, sans-serif;
   color: #005249;
-  font-size: 0.5rem;
-  line-height: 1.3;
+  font-size: 0.6rem;
+  line-height: 1.5;
   text-align: left;
 }
 
@@ -1172,8 +1173,8 @@ a {
   margin-bottom: 2rem;
   font-family: Pressstart2p, sans-serif;
   color: #005249;
-  font-size: 0.5rem;
-  line-height: 1.3;
+  font-size: 0.6rem;
+  line-height: 1.5;
   text-align: left;
 }
 
@@ -1324,6 +1325,11 @@ a {
 .calendlyembed {
   height: 100%;
   min-width: 320px;
+}
+
+.italic {
+  font-size: 0.5rem;
+  font-style: italic;
 }
 
 @media screen and (max-width: 991px) {
